src/test/wacc/valid/function/simple_functions/functionDeclaration.wacc
# a simple function is declared, but not called

# Output:

# Program:

begin
  int f() is
    return 0
  end
  skip
end
