src/test/wacc/invalid/whack/q2.wacc
# how much wacc could a whack wacc whack,
# if a whack wacc could whack wacc
begin
    int g() is
        return 5
        if true then return 4
        else skip fi
end
